tests/baselines/reference/indexerConstraints.errors.txt
==== tests/cases/compiler/indexerConstraints.ts (5 errors) ====
    interface A { a: number; }
    interface B extends A { b: number; }
    
    // Good case
    interface D {
        [s: string]: A;
    }
    interface D {
        [n: number]: B;
    }
    
    // Bad case
    interface E {
        [s: string]: B;
        ~~~~~~~~~~~~~~
!!! error TS2168: Numeric indexer type 'A' must be assignable to string indexer type 'B':
!!! 	Type 'A' is missing property 'b' from type 'B'.
    }
    interface E {
        [n: number]: A;
        ~~~~~~~~~~~~~~
!!! error TS2168: Numeric indexer type 'A' must be assignable to string indexer type 'B':
!!! 	Type 'A' is missing property 'b' from type 'B'.
    }
    
    // Inheritance
    interface F {
        [s: string]: B;
    }
    interface G extends F {
        [n: number]: A;
        ~~~~~~~~~~~~~~
!!! error TS2168: Numeric indexer type 'A' must be assignable to string indexer type 'B':
!!! 	Type 'A' is missing property 'b' from type 'B'.
    }
    
    // Other way
    interface H {
        [n: number]: A;
    }
    interface I extends H {
        [s: string]: B;
        ~~~~~~~~~~~~~~
!!! error TS2168: Numeric indexer type 'A' must be assignable to string indexer type 'B':
!!! 	Type 'A' is missing property 'b' from type 'B'.
    }
    
    // With hidden indexer
    interface J {
        [n: number]: {};
    }
    interface K extends J {
        [n: number]: A;
        ~~~~~~~~~~~~~~
!!! error TS2168: Numeric indexer type 'A' must be assignable to string indexer type 'B':
!!! 	Type 'A' is missing property 'b' from type 'B'.
        [s: string]: B;
    }